--- a/views/user.ejs
+++ b/views/user.ejs
@@ -1,8 +1,34 @@
 <% include ./partials/boilerplate %>
-  <div>
+  <div class="pane settings-pane">
     <ul>
       <li>Username: <%= userInfo.username %></li>
-      <li>email: <%= userInfo.email %></li>
+      <li>Email: <%= userInfo.email %></li>
+      <li>Alerts:</li>
+      <li>
+        <button id="addCar">Add a car</button>
+        <div class="nodisplay addCar">
+          <form action='../parking/' method="POST">
+            <input type="text" name="group_name" placeholder="Enter a label for your car">
+            <input type="text" name="description" placeholder="Enter a brief description of your vehicle">
+            <button type="submit">Submit</button>
+          </form>
+        </div>
+      </li>
+    </ul>
+  </div>
+  <% for(let i=0;i<cars.length;i++){ %>
+      <div class="pane car-pane <%= (i===0 ? 'selected' : 'nodisplay')%>">
+        <div class="car-name"><%= cars[i].group_name%><button class="view-next">view next</button></div>
+         <button id="getLocation">Get Current Location</button>
+          <div id="output"></div>
+          <button id="parkHere">Park Here</button>
+          <div id="cars-group">Group name</div>
+      </div>
+  <% } %>
+  <div class="pane group-pane">
+    <ul>
+      <li>You are the leader of this group</li>
+      <li>Add a new member</li>
     </ul>
   </div>
 <% include ./partials/end %>
